- Moved IP-related functions from MiscUtilities to IpUtilities  - Moved Login::hashPassword to MiscUtilities
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@2028 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/Common.vcproj
+++ b/Common.vcproj
@@ -224,6 +224,10 @@
 				Name="Utilities"
 				>
 				<File
+					RelativePath=".\src\Common\IpUtilities.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\Common\MiscUtilities.cpp"
 					>
 				</File>
@@ -405,6 +409,10 @@
 			<Filter
 				Name="Utilities"
 				>
+				<File
+					RelativePath=".\src\Common\IpUtilities.h"
+					>
+				</File>
 				<File
 					RelativePath=".\src\Common\LoopingId.h"
 					>
