Made PlayerLogin::status an enum
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@2030 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/LoginServer.vcproj
+++ b/LoginServer.vcproj
@@ -330,6 +330,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\Common\PlayerStatus.h"
+					>
+				</File>
+				<File
 					RelativePath=".\src\LoginServer\RankingCalculator.h"
 					>
 				</File>
