--- a/src/LoginServer/CMakeLists.txt
+++ b/src/LoginServer/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SOURCES
 	LoginServerAcceptPacket.h
 	LoginServerAcceptPlayer.h
 	PlayerLogin.h
+	PlayerStatus.h
 	PrecompiledHeader.h
 	RankingCalculator.h
 	Worlds.h
