Moved PlayerStatus.h from Common to LoginServer
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@2032 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/LoginServer.vcproj
+++ b/LoginServer.vcproj
@@ -330,7 +330,7 @@
 					>
 				</File>
 				<File
-					RelativePath=".\src\Common\PlayerStatus.h"
+					RelativePath=".\src\LoginServer\PlayerStatus.h"
 					>
 				</File>
 				<File
