Separated Trades into Trades and TradeHandler
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@2060 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -322,6 +322,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\TradeHandler.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\Trades.cpp"
 					>
 				</File>
@@ -677,6 +681,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\Trade.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\TradeHandler.h"
 					>
 				</File>
 				<File
