- Added new files from r2060 to src/ChannelServer/CMakeLists.txt - Made a minor change to Trades.h so that the source can be compiled on Linux
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@2065 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/src/ChannelServer/CMakeLists.txt
+++ b/src/ChannelServer/CMakeLists.txt
@@ -75,6 +75,7 @@ set(SOURCES
 	Summons.h
 	SummonsPacket.h
 	Trade.h
+	TradeHandler.h
 	Trades.h
 	TradesPacket.h
 	Variables.h
@@ -153,6 +154,7 @@ set(SOURCES
 	Summons.cpp
 	SummonsPacket.cpp
 	Trade.cpp
+	TradeHandler.cpp
 	Trades.cpp
 	TradesPacket.cpp
 	Variables.cpp
