Replaced FindLua.cmake with FindLua51.cmake which supports more setups
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@2122 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ include_directories(${MYSQL_INCLUDE_DIR})
 find_package(MySQL++ REQUIRED)
 include_directories(${MYSQL++_INCLUDE_DIR})
 
-find_package(Lua REQUIRED)
+find_package(Lua51 REQUIRED)
 include_directories(${LUA_INCLUDE_DIR})
 
 find_package(Crypto++ REQUIRED)
