- Renamed BuffHolder to PlayerPacketHolder  - Modified PlayerSummons to do marshaling of packet data  - Summons should now display correctly on channel switch (?)  - Modified inter header to reflect the new changes  - Somewhat simplified some code/cleaned up a little
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@2149 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -214,10 +214,6 @@
 					>
 				</File>
 				<File
-					RelativePath=".\src\ChannelServer\BuffHolder.cpp"
-					>
-				</File>
-				<File
 					RelativePath=".\src\ChannelServer\Buffs.cpp"
 					>
 				</File>
@@ -518,6 +514,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\PlayerPacketHolder.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\PlayerPets.cpp"
 					>
 				</File>
@@ -565,10 +565,6 @@
 				>
 				<File
 					RelativePath=".\src\ChannelServer\BuddyListHandler.h"
-					>
-				</File>
-				<File
-					RelativePath=".\src\ChannelServer\BuffHolder.h"
 					>
 				</File>
 				<File
@@ -873,6 +869,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\PlayerInventory.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\PlayerPacketHolder.h"
 					>
 				</File>
 				<File
