- Abstracted constants dependent on version to VersionConstants  - Added .70 EXP levels  - Re-added old tax levels
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@2164 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/src/ChannelServer/CMakeLists.txt
+++ b/src/ChannelServer/CMakeLists.txt
@@ -78,6 +78,7 @@ set(SOURCES
 	Trades.h
 	TradesPacket.h
 	Variables.h
+	VersionConstants.h
 	WorldServerConnectHandler.h
 	WorldServerConnectPacket.h
 	WorldServerConnectPlayer.h
@@ -156,6 +157,7 @@ set(SOURCES
 	Trades.cpp
 	TradesPacket.cpp
 	Variables.cpp
+	VersionConstants.cpp
 	WorldServerConnectHandler.cpp
 	WorldServerConnectPacket.cpp
 	WorldServerConnectPlayer.cpp
