--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -554,6 +554,14 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="Constants"
+				>
+				<File
+					RelativePath=".\src\ChannelServer\VersionConstants.cpp"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -925,6 +933,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\InstanceMessageConstants.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\VersionConstants.h"
 					>
 				</File>
 			</Filter>
