Rudimentary mount tracking support. Note: The SQL file will delete all your players' current mounts. They won't be trackable without getting new ones. Simply remove the delete from query if you do not care.
Known bugs/features not implemented:
 - EXP increasing
 - Tiredness stuff
 - When you throw stars or use arrows, the mount information in the player info box will be screwed up

git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@2198 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -514,6 +514,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\PlayerMounts.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\PlayerPacketHolder.cpp"
 					>
 				</File>
@@ -877,6 +881,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\PlayerInventory.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\PlayerMounts.h"
 					>
 				</File>
 				<File
