- Merge of r2113:2205, lemme know if everything worked out
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/branches/62_support@2209 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 2.6)
 
 project(Vana)
 
-set(LIBRARY_OUTPUT_PATH "../../lib")
-set(EXECUTABLE_OUTPUT_PATH "../../bin")
+set(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/lib")
+set(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin")
 
 #### Finding libraries
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
@@ -17,7 +17,7 @@ include_directories(${MYSQL_INCLUDE_DIR})
 find_package(MySQL++ REQUIRED)
 include_directories(${MYSQL++_INCLUDE_DIR})
 
-find_package(Lua REQUIRED)
+find_package(Lua51 REQUIRED)
 include_directories(${LUA_INCLUDE_DIR})
 
 find_package(Crypto++ REQUIRED)
