Added mist handling
 - Mobs that use poison mists should use them now
 - Should display properly to all clients when used
 - Poison Mist functions roughly properly
 - Smokescreen functions properly (not sure about party yet, let me know if you end up testing)

git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/branches/62_support@2219 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -254,6 +254,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\Mist.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\Mobs.cpp"
 					>
 				</File>
@@ -621,6 +625,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\Maps.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\Mist.h"
 					>
 				</File>
 				<File
