- Abstracted attacks into PlayerHandler (attacks are quite logically distinct from mobs)  - Renamed strange/confusing "damageMob" etc. to useMeleeAttack etc.
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/branches/62_support@2222 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -550,6 +550,10 @@
 				Name="Handlers"
 				>
 				<File
+					RelativePath=".\src\ChannelServer\AttackHandler.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\BuddyListHandler.cpp"
 					>
 				</File>
@@ -947,6 +951,10 @@
 			<Filter
 				Name="Handlers"
 				>
+				<File
+					RelativePath=".\src\ChannelServer\AttackHandler.h"
+					>
+				</File>
 				<File
 					RelativePath=".\src\ChannelServer\BuddyListHandler.h"
 					>
