- Moved all player stat-related functions to PlayerStats  - Introduced gear INT/HP/MP bonuses  - Subject to being cleaned up, not merging this with the trunk until I'm sure it's solid, I simply wanted to switch it from Player (this was a lot of work)
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/branches/62_support@2231 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -514,6 +514,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\PlayerStats.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\PlayerStorage.cpp"
 					>
 				</File>
@@ -889,6 +893,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\PlayerSkills.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\PlayerStats.h"
 					>
 				</File>
 				<File
