- Created framework and central location for server event/boat loading at runtime  - Class also has variables, which act as channel variables
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@2282 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -530,6 +530,10 @@
 				Name="Instance"
 				>
 				<File
+					RelativePath=".\src\ChannelServer\EventDataProvider.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\Instance.cpp"
 					>
 				</File>
@@ -907,6 +911,10 @@
 			<Filter
 				Name="Instance"
 				>
+				<File
+					RelativePath=".\src\ChannelServer\EventDataProvider.h"
+					>
+				</File>
 				<File
 					RelativePath=".\src\ChannelServer\Instance.h"
 					>
