- Some merging from trunk
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/branches/62_support@2285 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -534,6 +534,10 @@
 				Name="Instance"
 				>
 				<File
+					RelativePath=".\src\ChannelServer\EventDataProvider.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\Instance.cpp"
 					>
 				</File>
@@ -915,6 +919,10 @@
 			<Filter
 				Name="Instance"
 				>
+				<File
+					RelativePath=".\src\ChannelServer\EventDataProvider.h"
+					>
+				</File>
 				<File
 					RelativePath=".\src\ChannelServer\Instance.h"
 					>
