- Full monster book support  - Credit goes to Diamondo25 for this one, the whole thing is his patch
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@2290 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -346,6 +346,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\MonsterBookPacket.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\NPCPacket.cpp"
 					>
 				</File>
@@ -491,6 +495,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\PlayerInventory.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\PlayerMonsterBook.cpp"
 					>
 				</File>
 				<File
@@ -728,6 +736,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\MonsterBookPacket.h"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\NPCPacket.h"
 					>
 				</File>
@@ -873,6 +885,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\PlayerInventory.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\PlayerMonsterBook.h"
 					>
 				</File>
 				<File
