- Merge of monster book stuff (no, it doesn't work in .62, but the shadow of the data is still in the packets and it's a good idea to describe that in code)  - Other miscellaneous merges  - Redid the header format in RecvHeader.h and SendHeader.h to be consistent with trunk
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/branches/62_support@2293 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -494,6 +494,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\PlayerMonsterBook.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\PlayerMounts.cpp"
 					>
 				</File>
@@ -877,6 +881,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\PlayerInventory.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\PlayerMonsterBook.h"
 					>
 				</File>
 				<File
