- Fixed crashing with KIN on random function  - Added BeautyDataProvider  - Added 3 new Lua exports: getRandomHair, getRandomFace, getRandomSkin
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@2391 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -414,6 +414,10 @@
 				Name="DataBaseLoading"
 				>
 				<File
+					RelativePath=".\src\ChannelServer\BeautyDataProvider.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\DropDataProvider.cpp"
 					>
 				</File>
@@ -803,6 +807,10 @@
 			<Filter
 				Name="DataBaseLoading"
 				>
+				<File
+					RelativePath=".\src\ChannelServer\BeautyDataProvider.h"
+					>
+				</File>
 				<File
 					RelativePath=".\src\ChannelServer\DropDataProvider.h"
 					>
