--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -410,6 +410,10 @@
 				Name="DataBaseLoading"
 				>
 				<File
+					RelativePath=".\src\ChannelServer\BeautyDataProvider.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\DropDataProvider.cpp"
 					>
 				</File>
@@ -799,6 +803,10 @@
 			<Filter
 				Name="DataBaseLoading"
 				>
+				<File
+					RelativePath=".\src\ChannelServer\BeautyDataProvider.h"
+					>
+				</File>
 				<File
 					RelativePath=".\src\ChannelServer\DropDataProvider.h"
 					>
