- Added the translucency to Hide
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@2501 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -330,6 +330,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\GMPacket.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\InventoryPacket.cpp"
 					>
 				</File>
@@ -721,6 +725,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\FamePacket.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\GMPacket.h"
 					>
 				</File>
 				<File
