Mr. Biggie Patch 5000
 - MCDB 3.0 support
 - Proper banish support
 - Renamed a bunch of scripts
 - Optimized Shadow Web mob processing to lighten processor load
 - Added Hsalf speed buff, may need refinement?
 - Added timemob support
 - Added support for named NPC, reactor, and quest scripts (you may still use integers if you want)
 - Fixed up quest reward processing to levels unparalleled
 - Added buff and skill quest rewards (both master level and skill points if applicable)
 - Renamed Infighter to the global-correct "Brawler"
 - Added global drop support
 - Clarified some mob skills I figured out
 - Modified the way monster book cards are handled
 - Added support for all the monster card buffs, just need buff bytes/types
 - Modified lots of loading routines so they're much easier to maintain
 - Moved mob death buff handling from mob death to Map class
 - Fixed flying mobs
 - Added small hacking check for friendly mobs
 - Fixed bug I added in PlayerActiveBuffs where items that healed an ailment would heal all debuffs
 - Fixed reactor bug where for some reason, it would overwrite the max state with a lower value
 - Increased max drop integer to 1 million

Probably some stuff I missed, whatever. Bug report section if anything goes wrong.

git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@2504 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -442,6 +442,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\ScriptDataProvider.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\ShopDataProvider.cpp"
 					>
 				</File>
@@ -837,6 +841,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\MobDataProvider.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\ScriptDataProvider.h"
 					>
 				</File>
 				<File
