--- a/src/ChannelServer/CMakeLists.txt
+++ b/src/ChannelServer/CMakeLists.txt
@@ -17,6 +17,7 @@ set(SOURCES
 	FamePacket.h
 	GameConstants.h
 	GameLogicUtilities.h
+	GMPacket.h
 	InitializeChannel.h
 	Instance.h
 	InstanceMessageConstants.h
@@ -71,6 +72,7 @@ set(SOURCES
 	QuestsPacket.h
 	ReactorPacket.h
 	Reactors.h
+	ScriptDataProvider.h
 	ServerPacket.h
 	ShopDataProvider.h
 	SkillMacros.h
@@ -103,6 +105,7 @@ set(SOURCES
 	EventDataProvider.cpp
 	Fame.cpp
 	FamePacket.cpp
+	GMPacket.cpp
 	InitializeChannel.cpp
 	Instance.cpp
 	Instances.cpp
@@ -156,6 +159,7 @@ set(SOURCES
 	QuestsPacket.cpp
 	ReactorPacket.cpp
 	Reactors.cpp
+	ScriptDataProvider.cpp
 	ServerPacket.cpp
 	ShopDataProvider.cpp
 	SkillMacros.cpp
