- Separated Drop from Drops  - Renamed Drops to DropHandler  - Fixed bug where loading totally ruined global drops  - Made global drop parsing more efficient  - Added FFA/explosive drops
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@2533 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -222,7 +222,7 @@
 					>
 				</File>
 				<File
-					RelativePath=".\src\ChannelServer\Drops.cpp"
+					RelativePath=".\src\ChannelServer\Drop.cpp"
 					>
 				</File>
 				<File
@@ -586,6 +586,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\DropHandler.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\MobHandler.cpp"
 					>
 				</File>
@@ -624,7 +628,7 @@
 					>
 				</File>
 				<File
-					RelativePath=".\src\ChannelServer\Drops.h"
+					RelativePath=".\src\ChannelServer\Drop.h"
 					>
 				</File>
 				<File
@@ -1009,6 +1013,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\CommandHandler.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\DropHandler.h"
 					>
 				</File>
 				<File
