Modified CMakeLists.txt for r2533
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/branches/62_support@2540 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/src/ChannelServer/CMakeLists.txt
+++ b/src/ChannelServer/CMakeLists.txt
@@ -10,7 +10,8 @@ set(SOURCES
 	CommandHandler.h
 	Connectable.h
 	DropDataProvider.h
-	Drops.h
+	Drop.h
+	DropHandler.h
 	DropsPacket.h
 	EventDataProvider.h
 	Fame.h
@@ -101,7 +102,8 @@ set(SOURCES
 	CommandHandler.cpp
 	Connectable.cpp
 	DropDataProvider.cpp
-	Drops.cpp
+	Drop.cpp
+	DropHandler.cpp
 	DropsPacket.cpp
 	EventDataProvider.cpp
 	Fame.cpp
