- Split Inventory from InventoryHandler
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@2544 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -590,6 +590,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\InventoryHandler.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\MobHandler.cpp"
 					>
 				</File>
@@ -1017,6 +1021,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\DropHandler.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\InventoryHandler.h"
 					>
 				</File>
 				<File
