- Removed superfluous/pointless questid binding to an NPC  - Removed getQuestID() NPC export  - Abstracted file existence code into FileUtilities
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/branches/62_support@2595 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/Common.vcproj
+++ b/Common.vcproj
@@ -224,6 +224,10 @@
 				Name="Utilities"
 				>
 				<File
+					RelativePath=".\src\Common\FileUtilities.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\Common\IpUtilities.cpp"
 					>
 				</File>
@@ -409,6 +413,10 @@
 			<Filter
 				Name="Utilities"
 				>
+				<File
+					RelativePath=".\src\Common\FileUtilities.h"
+					>
+				</File>
 				<File
 					RelativePath=".\src\Common\IpUtilities.h"
 					>
